Multi-cell adoption
Keep renaming 'default' cell consistent for single and multi cells:

* Default becomes cellX (or it can be imported as is, for a multi-cell
  case only)
* cell1 becomes mapped to openstack-cell1 osdp node set
* cell2 becomes mapped to openstack-cell2 osdp node set, etc.
* cellX (X=3 here) becomes mapped to openstack-cell3. Alternatively,
  default cell retains its name for the openstack-default osdpns
  mapping

Evaluate podified MariaDB passwords for cells from osp-secret
to align the tests with documented commands. Remove no longer
needed podified DB password variable.

Make ansible and shell variables compute cells aware.
Split edpm nodes into compute cells by 1:1 mapping it as
dataplane nodesets.

Rework vars and secrets YAML values for the source and edpm
nodes to not confuse its different naming schemes for cells
in OSP/TripleO and RHOSO.

Use edpm_nodes var to describe compuptes for each cell,
instead of static host and ip vars that only used to work for
a single-cell standalone, or multi-node single cell cases.

Remove edpm_computes vars no longer used after moving stopping
control-plane tripleo services into edpm-ansible

Remove cached fact for pulled OSP configuration as it can no longer
be generated in a multi-cell setup, where related shell variables
become bash arrays.

Simplify ENV headers management by collecting in a single place.

Provide a variable to define the source cloud Ironic topology,
for any cells with Ironic services.

Align nova/libvirt and related services ordering in the
lists of services defined in multiple places, with those
specified in VA.

Add a missing step in the fast forward uprgade guide
to complete the adoption of the remaining dataplane services.

Align the names in the tests to follow the documented steps
to make the corresponding code easy discoverable.

Adjust storage/storageRequests values to make it better fitting
a multi-cell test scenarios. Also provide values in docs and
add a comment to adjust the

--- a/docs_user/modules/proc_configuring-data-plane-nodes.adoc
+++ b/docs_user/modules/proc_configuring-data-plane-nodes.adoc
@@ -34,7 +34,7 @@ kind: NetConfig
 metadata:
   name: netconfig
 spec:
-  networks:
+  networks: <1>
   - name: internalapi
     dnsDomain: internalapi.example.com
     subnets:
@@ -63,6 +63,7 @@ spec:
       cidr: 172.19.0.0/24
       vlan: 22
 ```
+<1> The networks composition must match the source cloud configuration to avoid dataplane connectivity downtime.
 
 List multiple `allocationRanges` entries to exclude some of the IP addresses,
 e.g. to accommodate for addresses already consumed by the adopted environment.
